localization/v2.5.x/site/zh-hant/integrations/integrations_overview.md
---
id: integrations_overview.md
summary: 本頁提供一系列教學，讓您與 Milvus 及第三方工具互動。
title: 整合概述
---

<h1 id="Integrations-Overview" class="common-anchor-header">整合概述<button data-href="#Integrations-Overview" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>本頁提供一系列教學，讓您與 Milvus 和第三方工具互動。</p>
<table>
<thead>
<tr><th>教學</th><th>使用案例</th><th>合作夥伴或堆疊</th></tr>
</thead>
<tbody>
<tr><td><a href="/docs/zh-hant/v2.5.x/integrate_with_llamaindex.md">使用 Milvus 和 LlamaIndex 的 RAG</a></td><td>RAG</td><td>Milvus、LLamaIndex</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/integrate_with_langchain.md">RAG 與 Milvus 和 LangChain</a></td><td>RAG</td><td>Milvus、LangChain</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/milvus_hybrid_search_retriever.md">在LangChain中的Milvus混合搜索檢索器</a></td><td>混合搜尋</td><td>Milvus、LangChain</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/basic_usage_langchain.md">在 LangChain 中使用 Milvus 作為向量儲存器</a></td><td>語意搜尋</td><td>Milvus、LangChain</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/full_text_search_with_langchain.md">在LangChain和Milvus中使用全文檢索</a></td><td>全文檢索</td><td>Milvus、LangChain</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/integrate_with_haystack.md">使用 Milvus 和 Haystack 的 RAG</a></td><td>全文檢索</td><td>Milvus、Haystack</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/llamaindex_milvus_async.md">使用 Milvus 和 LlamaIndex Async API 的 RAG</a></td><td>協調</td><td>Milvus、LlamaIndex</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/milvus_rag_with_vllm.md">使用 Milvus、vLLM 和 Llama 3.1 建立 RAG</a></td><td>RAG</td><td>Milvus、vLLM、LlamaIndex</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/llamaindex_milvus_full_text_search.md">使用 LlamaIndex 和 Milvus 進行全文檢索</a></td><td>全文檢索</td><td>Milvus、LlamaIndex</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/dify_with_milvus.md">使用 Milvus 部署 Dify</a></td><td>協調</td><td>虛擬化</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/rag_with_langflow.md">使用 Milvus 與 Langflow 建立 RAG 系統</a></td><td>協調</td><td>Milvus、Langflow</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/use_milvus_in_private_gpt.md">在 PrivateGPT 中使用 Milvus</a></td><td>協調</td><td>向量搜尋</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/use_milvus_in_docsgpt.md">在 DocsGPT 中使用 Milvus</a></td><td>協調</td><td>DocsGPT, Milvus</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/use_milvus_with_sambanova.md">在 SambaNova 中使用 Milvus</a></td><td>協調</td><td>Milvus、SambaNova</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/milvus_rag_with_dynamiq.md">開始使用 Dynamiq 和 Milvus</a></td><td>協調</td><td>Milvus、Dynamiq</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/llama_stack_with_milvus.md">使用 Milvus 與 Llama Stack 建立 RAG</a></td><td>協調</td><td>Milvus、Llama Stack</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/integrate_with_memgpt.md">使用 Milvus 和 MemGPT 的聊天機代理程式</a></td><td>代理程式</td><td>Milvus、MemGPT</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/llama_agents_metadata.md">使用 Mistral AI、Milvus 和 Llama-agents 的多代理系統</a></td><td>代理程式</td><td>Milvus、Mistral AI、LlamaIndex</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/quickstart_mem0_with_milvus.md">開始使用 Mem0 和 Milvus</a></td><td>代理程式</td><td>Mem0, Milvus</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/integrate_with_agno.md">將 Milvus 與 Agno 整合</a></td><td>代理程式</td><td>Milvus、Agno</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/milvus_and_mcp.md">MCP + Milvus：連結 AI 與向量資料庫</a></td><td>代理</td><td>Milvus、MCP</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/openai_agents_milvus.md">Milvus 與 OpenAI 代理的整合：分步指南</a></td><td>代理程式</td><td>Milvus、OpenAI</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/integrate_with_ragas.md">使用 Ragas 和 Milvus 進行 RAG 評估</a></td><td>評估</td><td>Milvus、Ragas</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/evaluation_with_deepeval.md">使用 DeepEval 評估</a></td><td>評估與可觀察性</td><td>Milvus、DeepEval</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/evaluation_with_phoenix.md">使用 Arize Pheonix 評估</a></td><td>評估與可觀性</td><td>Milvus、Arize Pheonix</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/integrate_with_langfuse.md">Milvus 在 Langfuse 中</a></td><td>可觀察性</td><td>Milvus、Langfuse</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/integrate_with_openai.md">使用 Milvus 和 OpenAI 進行語義搜尋</a></td><td>語意搜尋</td><td>Milvus、OpenAI</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/integrate_with_cohere.md">使用 Milvus 和 Cohere 進行問題回答</a></td><td>語意搜尋</td><td>邏輯搜尋</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/integrate_with_hugging-face.md">使用 Milvus 和 HuggingFace 進行問題回答</a></td><td>問題回答</td><td>Milvus、HuggingFace</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/integrate_with_pytorch.md">使用 Milvus 和 Pytorch 進行圖像搜尋</a></td><td>語意搜尋</td><td>詞彙搜尋</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/integrate_with_sentencetransformers.md">使用 Milvus 和 SentenceTransfromers 進行電影搜尋</a></td><td>語意搜尋</td><td>Milvus、SentenceTransformers</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/integrate_with_voxel51.md">使用 Milvus 和 FiftyOne 進行視覺搜尋</a></td><td>語意搜尋</td><td>Milvus、FiftyOne</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/integrate_with_voyageai.md">使用 Milvus 和 VoyageAI 進行語意搜尋</a></td><td>語意搜尋</td><td>Milvus、VoyageAI</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/integrate_with_bentoml.md">使用 Milvus 和 BentoML 的 RAG</a></td><td>RAG</td><td>Milvus、BentoML</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/integrate_with_dspy.md">使用 Milvus 和 DSPy 的 RAG</a></td><td>RAG</td><td>Milvus、DSPy</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/integrate_with_jina.md">使用 Milvus 和 Jina 進行語意搜尋</a></td><td>語意搜尋</td><td>Milvus、Jina</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/integrate_with_snowpark.md">Milvus在Snowpark容器服務上的應用</a></td><td>資料連接</td><td>Milvus、Snowpark</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/integrate_with_whyhow.md">使用 Milvus 和 WhyHow 進行基於規則的檢索</a></td><td>問題回答</td><td>Milvus、WhyHow</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/integrate_with_fastgpt.md">如何使用 Milvus 部署 FastGPT</a></td><td>RAG</td><td>Milvus、FastGPT</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/integrate_with_vanna.md">使用 Vanna 和 Milvus 寫 SQL</a></td><td>RAG</td><td>Milvus、Vanna</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/integrate_with_camel.md">使用 Milvus 和 Camel 進行 RAG</a></td><td>RAG</td><td>Milvus、Camel</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/integrate_with_airbyte.md">Airbyte 與 Milvus：開放源碼資料移動基礎架構</a></td><td>資料連接</td><td>Milvus、Airbyte</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/video_search_with_twelvelabs_and_milvus.md">進階視訊搜尋：利用 Twelve Labs 和 Milvus 進行語義檢索</a></td><td>語意搜尋</td><td>Milvus、Twelve Labs</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/kafka-connect-milvus.md">用 Milvus 連接 Kafka</a></td><td>資料來源</td><td>Milvus、Kafka</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/kotaemon_with_milvus.md">Kotaemon RAG 與 Milvus</a></td><td>RAG</td><td>Milvus、Kotaemon</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/apify_milvus_rag.md">擷取增強世代：使用 Apify 抓取網站並將資料儲存至 Milvus 以進行問題解答</a></td><td>資料來源</td><td>Milvus、Apify</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/build_rag_on_arm.md">在 Arm 架構上建立 RAG</a></td><td>RAG</td><td>Milvus、Arm</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/build_RAG_with_milvus_and_fireworks.md">使用 Milvus 和 Fireworks AI 建立 RAG</a></td><td>LLMs</td><td>Milvus、Fireworks AI</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/build_RAG_with_milvus_and_lepton.md">使用 Milvus 和 Lepton AI 建立 RAG</a></td><td>LLMs</td><td>Milvus、Lepton AI</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/build_RAG_with_milvus_and_siliconflow.md">使用 Milvus 和 SiliconFlow 建立 RAG</a></td><td>LLMs</td><td>Milvus、SiliconFlow</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/rag_with_milvus_and_unstructured.md">使用 Milvus 和非結構化</a></td><td>資料來源</td><td>Milvus、非結構化</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/RAG_with_pii_and_milvus.md">使用 Milvus + PII 掩碼器建立 RAG</a></td><td>資料來源</td><td>Milvus、PII 掩碼器</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/knowledge_table_with_milvus.md">使用 Milvus 建立知識表</a></td><td>知識工程</td><td>知識表，Milvus</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/build_RAG_with_milvus_and_cognee.md">使用 Milvus 和 Cognee 建立 RAG</a></td><td>知識工程</td><td>知識工程</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/build_RAG_with_milvus_and_gemini.md">使用 Milvus 和 Gemini 建立 RAG</a></td><td>LLMs</td><td>Milvus、Gemini</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/build_RAG_with_milvus_and_ollama.md">使用 Milvus 和 Ollama 建立 RAG</a></td><td>LLMs</td><td>Milvus、Ollama</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/build_RAG_with_milvus_and_deepseek.md">使用 Milvus 和 DeepSeek 建立 RAG</a></td><td>LLMs</td><td>Milvus、DeepSeek</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/build_RAG_with_milvus_and_crawl4ai.md">使用 Milvus 和 Crawl4AI 建立 RAG</a></td><td>資料來源</td><td>Milvus、Crawl4AI</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/build_RAG_with_milvus_and_firecrawl.md">使用 Milvus 和 Firecrawl 建立 RAG</a></td><td>資料來源</td><td>Milvus、Firecrawl</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/integration_with_mindsdb.md">整合 Milvus 與 MindsDB</a></td><td>知識工程</td><td>Milvus、MindsDB</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/build_RAG_with_milvus_and_feast.md">使用 Milvus 和 Feast 建立 RAG</a></td><td>資料來源</td><td>Milvus、Feast</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/build_RAG_with_milvus_and_docling.md">使用 Milvus 和 Docling 建立 RAG</a></td><td>資料來源</td><td>Milvus, Docling</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/build_RAG_with_milvus_and_embedAnything.md">使用 Milvus 和 EmbedAnything 建立 RAG</a></td><td>嵌入</td><td>Milvus、EmbedAnything</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/milvus_and_n8n.md">開始使用 Milvus 和 n8n</a></td><td>協調</td><td>Milvus, n8n</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/use_milvus_in_anythingllm.md">在 AnythingLLM 中使用 Milvus</a></td><td>協調</td><td>Milvus, AnythingLLM</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/NLWeb_with_milvus.md">在 Milvus 中使用 NLWeb</a></td><td>資料來源</td><td>Milvus, NLWeb</td></tr>
</tbody>
</table>
